🔧 Vite 빌드 시스템 수정 - type="module" 추가

--- a/src/index.html
+++ b/src/index.html
@@ -143,9 +143,9 @@
 
     <!-- 새로운 컴포넌트 시스템 -->
     <link rel="stylesheet" href="assets/css/design-system.css">
-    <script src="assets/js/color-manager.js"></script>
-    <script src="assets/js/language-manager.js"></script>
-    <script src="assets/js/terminal-header.js"></script>
+    <script type="module" src="assets/js/color-manager.js"></script>
+    <script type="module" src="assets/js/language-manager.js"></script>
+    <script type="module" src="assets/js/terminal-header.js"></script>
     
     <!-- 기존 모듈들 -->
     <script type="module" src="assets/js/performance.js"></script>
