fix(translation): Safari 자동 번역 차단 강화 - Apple 전용 메타태그 추가

--- a/src/en/quiz/index.html
+++ b/src/en/quiz/index.html
@@ -7,6 +7,10 @@
     <!-- 🚫 Browser auto-translation completely blocked -->
     <meta name="google" content="notranslate">
     <meta name="robots" content="notranslate">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="format-detection" content="telephone=no">
+    <meta http-equiv="Content-Language" content="en">
+    <meta name="language" content="English">
     
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" sizes="any">
