--- a/src/ko/quiz/index.html
+++ b/src/ko/quiz/index.html
@@ -7,6 +7,10 @@
     <!-- 🚫 브라우저 자동 번역 완전 차단 -->
     <meta name="google" content="notranslate">
     <meta name="robots" content="notranslate">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="format-detection" content="telephone=no">
+    <meta http-equiv="Content-Language" content="ko">
+    <meta name="language" content="Korean">
     
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" sizes="any">
